2004-05-24 Miguel Sofer <msofer@users.sf.net>

	* doc/set.n: accurate description of name resolution process,
	referring to namespace.n for details [Bug 959180]

2004-05-22  Miguel Sofer <msofer@users.sf.net>

	* generic/tclVar.c (TclObjUnsetVar2): backported fix [Bug 735335]
	and new (in tcl8.4) exteriorisations of [Bug 736729] due to the use of
	tclNsVarNameType obj types. The consequences of [Bug 736729]
	should be the same as in tcl8.3 and previous versions.
	The use of tclNsVarNameType objs is still disabled, pending a
	decision by the release manager.

2004-05-19  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* win/tclWinFile.c (TclpMatchInDirectory): fix for an issue
	where there was a sneak path from Tcl_DStringFree to
	SetErrorCode(0). The result was that the error code could
	be reset between a call to FindFirstFile and the check
	of its status return, leading to a bizarre error return of
	{POSIX unknown {No error}}.  (Found in unplanned test -
	no incident logged at SourceForge.)

2004-05-19  Andreas Kupries  <andreask@activestate.com>

	* tclIO.c: Fixed [SF Tcl Bug 943274]. This is the same problem as
	* tclIO.h: [SF Tcl Bug 462317], see ChangeLog entry
	           2001-09-26. The fix done at that time is incomplete. It
	           is possible to get around it if the actual read
	           operation is defered and not executed in the event
	           handler itself. Instead of tracking if we are in an
	           read caused by a synthesized fileevent we now track if
	           the OS has delivered a true event = actual data and
	           bypass the driver if a read finds that there is no
	           actual data waiting. The flag is cleared by a short or
	           full read.

2004-05-18  Kevin B. Kenny  <kennykb@acm.org>

	* compat/strftime.c (_fmt, ISO8601Week):
	* doc/clock.n:
	* tests/clock.test: Major rework to the handling of ISO8601
	week numbers.  Now passes all the %G and %V test cases on